--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,12 @@ language: go
 go:
   - 1.8
   - master
+
+before_install:
+  - go get -t -v ./...
+
+script:
+  - go test -v -race -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
