--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ go:
   - 1.8
   - master
 
-before_install:
-  - go get -t -v ./...
-
+# Seperate test + race condition detection and coverage
+# Otherwise line numbers get skewed
 script:
-  - go test -v -race -coverprofile=coverage.txt -covermode=atomic
+  - go test -v -race
+  - go test -coverprofile=coverage.txt -covermode=atomic
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
